Markup for about, testimonials and gallery sections.

--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   "author": "Marios Sofokleous",
   "license": "MIT",
   "dependencies": {
+    "@midzer/tobii": "^2.3.3",
     "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
+    "fslightbox": "^3.3.1",
     "headroom.js": "^0.12.0"
   },
   "devDependencies": {
